# audiocover

./: .gitignore  LICENSE  Makefile  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: cpu_debug.yaml  high_quality.yaml  training_simple.yaml
docs/: ARCHITECTURE.md  DATA_FORMAT.md  EXTERNAL_BACKENDS.md  RESPONSIBLE_USE.md
packaging/: audiocover-gui.spec
profiles/: example.yaml
scripts/: build_desktop.py  build_windows.ps1  run_gui.bat
src/audiocover/: audio.py  cli.py  config.py  dataset.py  external.py  gui.py  pipeline.py  pitch.py  process.py  qc.py  runtime.py  simple_timbre.py  stages.py  training.py
src/audiocover/workers/: __init__.py  demucs_separator_worker.py  json_worker.py  rvc_worker.py  simple_timbre_worker.py  so_vits_svc_worker.py
src/audiocover_lab/: audio.py  cli.py  config.py  dataset.py  external.py  gui.py  pipeline.py  stages.py  training.py
tests/: test_audio.py  test_config.py  test_pitch.py  test_process.py  test_release_packaging.py  test_runtime_manager.py  test_training_and_render.py  test_worker_protocol.py
