[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "audiocover"
version = "0.8.3"
description = "Desktop GUI and CLI for training target profiles and rendering audio covers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yuhang Cao", email = "caoyuhang@fwerkor.com" }]
keywords = ["audio", "singing", "voice-conversion", "desktop", "source-separation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "soundfile>=0.12.1",
  "pyloudnorm>=0.1.1",
]

[project.optional-dependencies]
gpu = [
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
  "demucs>=4.0.1",
]
full = [
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
  "demucs>=4.0.1",
]
demucs-backend = [
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
  "demucs>=4.0.1",
]
so-vits-svc-backend = [
  "so-vits-svc-fork==4.2.30",
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
  "tensorboard>=2.16.0",
  "scikit-learn>=1.4.0",
  "tqdm-joblib>=0.0.4",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "tomli>=2.0.1; python_version < '3.11'",
]
build = [
  "build>=1.2.1",
  "pyinstaller>=6.8.0",
]

[project.scripts]
audiocover = "audiocover.cli:app"
audiocover-gui = "audiocover.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audiocover"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
